--- a/app/assets/stylesheets/daily_records.scss
+++ b/app/assets/stylesheets/daily_records.scss
@@ -5,86 +5,94 @@
 // 管理者側：入力フォームページ
 
 // ----- ラジオボタン全体装飾 ------
+.condition {
+  position: relative;
+  .three_button {
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    display: flex;
 
-.three_button {
-  margin: 0;
-  padding: 10px;
-  text-align: center;
-  display: flex;
+    // ラジオボタンの丸を消す
+    input {
+      display: none;
+    }
 
-  // ラジオボタンの丸を消す
-  input {
-    display: none;
+    label {
+      padding: 10px 20px;
+      margin: 10px 0px;
+      background-color: #eeeeee;
+
+      // // 余分な線を消す
+      // &.radio_border {
+      //   border-left: none;
+      // }
+    }
+
+    label:first-of-type {
+      border-radius: 3px 0 0 3px;
+      border-right: solid 2px #e0e0e0;
+    }
+
+    label:last-of-type {
+      border-radius: 0 3px 3px 0;
+      border-left: solid 2px #e0e0e0;
+    }
+
+    input:checked + label {
+      background-color: #ff822e;
+      padding: 10px 20px;
+      margin: 10px 0px;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    //todo 選択した後ろの背景に薄く丸・三角・バツを表示させたらより見やすいボタンになると思う。
   }
 
-  label {
-    padding: 10px 20px;
-    margin: 10px 0px;
-    background-color: #eeeeee;
-
-    // // 余分な線を消す
-    // &.radio_border {
-    //   border-left: none;
-    // }
+  #hidden {
+    position: absolute;
+    top: 70%;
+    
   }
 
-  label:first-of-type {
-    border-radius: 3px 0 0 3px;
-    border-right: solid 2px #e0e0e0;
-  }
+  .twe_button {
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    display: flex;
 
-  label:last-of-type {
-    border-radius: 0 3px 3px 0;
-    border-left: solid 2px #e0e0e0;
-  }
+    // ラジオボタンの丸を消す
+    input {
+      display: none;
+    }
 
-  input:checked + label {
-    background-color: #ff822e;
-    padding: 10px 20px;
-    margin: 10px 0px;
-    color: #fff;
-    font-weight: bold;
-  }
+    label {
+      padding: 10px 20px;
+      margin: 10px 0px;
+      background-color: #eeeeee;
 
-  //todo 選択した後ろの背景に薄く丸・三角・バツを表示させたらより見やすいボタンになると思う。
-}
+      // // 余分な線を消す
+      // &.radio_border {
+      //   border-left: none;
+      // }
+    }
 
-.twe_button {
-  margin: 0;
-  padding: 10px;
-  text-align: center;
-  display: flex;
+    label:first-of-type {
+      border-radius: 3px 0 0 3px;
+      border-right: solid 2px #e0e0e0;
+    }
 
-  // ラジオボタンの丸を消す
-  input {
-    display: none;
-  }
+    label:last-of-type {
+      border-radius: 0 3px 3px 0;
+    }
 
-  label {
-    padding: 10px 20px;
-    margin: 10px 0px;
-    background-color: #eeeeee;
-
-    // // 余分な線を消す
-    // &.radio_border {
-    //   border-left: none;
-    // }
-  }
-
-  label:first-of-type {
-    border-radius: 3px 0 0 3px;
-    border-right: solid 2px #e0e0e0;
-  }
-
-  label:last-of-type {
-    border-radius: 0 3px 3px 0;
-  }
-
-  input:checked + label {
-    background-color: #ff822e;
-    padding: 10px 20px;
-    margin: 10px 0px;
-    color: #fff;
-    font-weight: bold;
+    input:checked + label {
+      background-color: #ff822e;
+      padding: 10px 20px;
+      margin: 10px 0px;
+      color: #fff;
+      font-weight: bold;
+    }
   }
 }
