--- a/app/assets/stylesheets/calendars.scss
+++ b/app/assets/stylesheets/calendars.scss
@@ -45,78 +45,137 @@
 	margin: 10px;
 }
 
+// ---------------- 上書きしていないindex -----------------
+// 全体余白
+#calendars_index_body {
+	padding: 20px;
+}
+
 // ----------------------------------------------------------
 //      show 行事詳細画面
 // ----------------------------------------------------------
 
-.calendar_time {
-	display: flex;
-	margin: 10px 0;
-	label {
-		margin-right: 5px;
-		text-align: left;
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
+// 全体余白
+#calendars_show_body {
+	padding: 20px;
+	.calendar_time {
+		display: flex;
+		margin: 10px 0;
+		label {
+			margin-right: 5px;
+			text-align: left;
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
+		p {
+			margin-right: 5px;
+			text-align: left;
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
 	}
-	strong {
-		margin-right: 5px;
-		text-align: left;
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
-	}
-}
 
-.calendar_title {
-	display: flex;
-	margin: 10px 0;
-	label {
-		margin-right: 5px;
-		text-align: left;
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
+	.calendar_title {
+		display: flex;
+		margin: 10px 0;
+		label {
+			margin-right: 5px;
+			text-align: left;
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
+		p {
+			margin-right: 5px;
+			text-align: left;
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
 	}
-	strong {
-		margin-right: 5px;
-		text-align: left;
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
-	}
-}
 
-.calendar_content {
-	text-align: left;
-	margin: 10px 0;
-	label {
-		margin-right: 5px;
+	.calendar_content {
 		text-align: left;
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		border-right: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
+		margin: 10px 0;
+		label {
+			margin-right: 5px;
+			text-align: left;
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			border-right: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
+		#calendar_content {
+			width: 100%;
+			height: 200px;
+			margin-top: 5px;
+		}
 	}
-	#calendar_content {
-		width: 100%;
-		height: 200px;
-		margin-top: 5px;
+	.calendar_content_show {
+		text-align: left;
+		margin-bottom: 20px;
+		p {
+			margin: 0 5px 5px 0;
+			border-bottom: solid 3px #fce38a;
+			padding: 0 10px;
+			margin: 15px 0 0 0;
+		}
 	}
 }
-.calendar_content_show {
-	text-align: left;
-	margin-bottom: 20px;
-	strong {
-		margin: 0 5px 5px 0;
-		border-left: solid 3px #fce38a;
-		border-right: solid 3px #fce38a;
+// ----------------------------------------------------------
+//      new 入力
+// ----------------------------------------------------------
+// 全体余白・背景色変更
+#calendars_new_body {
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+	h1 {
+		text-align: center;
+		font-size: 20px;
 		display: inline-block;
-		padding: 0 5px;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
 	}
+	// ----- ラベル線 ---------
+	#calendar_time_new {
+		display: flex;
+		margin: 10px;
+		label {
+			border-left: solid 3px #08d9d6;
+			padding-left: 5px;
+		}
+	}
+	#calendar_title_new {
+		display: flex;
+		margin: 10px;
+
+		label {
+			border-left: solid 3px #08d9d6;
+			padding-left: 5px;
+		}
+	}
+
+	#calendar_content_new {
+		margin: 10px;
+		display: flex;
+		flex-direction: column;
+		label {
+			border-bottom: solid 3px #08d9d6;
+			padding: 5px;
+			margin-bottom: 10px;
+		}
+		#calendar_content {
+			height: 100px;
+		}
+	}
+	//----------------------------
 }
