--- a/app/assets/stylesheets/change_posts.scss
+++ b/app/assets/stylesheets/change_posts.scss
@@ -8,25 +8,29 @@
 
 // ------------------ 詳細cssはdaily_records.scss -------------------
 
-// テキストボックス枠が一部見えなくなっていたのを解消
-.change_flex {
-	padding: 2px;
+// 全体余白・背景色変更
+#change_posts_new_body {
+	padding: 20px;
+	// テキストボックス枠が一部見えなくなっていたのを解消
+	.change_flex {
+		padding: 2px;
 
-	label {
-		text-align: left;
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
+		label {
+			text-align: left;
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
 	}
-}
 
-// タイトル下線
-#change_other {
-	.change_label {
-		border-bottom: dashed 2px #fce38a;
-		padding: 5px 0;
-		margin: 10px 0px;
+	// タイトル下線
+	#change_other {
+		.change_label {
+			border-bottom: dashed 2px #fce38a;
+			padding: 5px 0;
+			margin: 10px 0px;
+		}
 	}
 }
 
@@ -34,6 +38,83 @@
 //         show 管理者画面
 // ------------------------------------------------------
 
+// 全体余白
 #change_posts_show {
-	text-align: left;
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+
+	h1 {
+		text-align: center;
+		font-size: 20px;
+		display: inline-block;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
+	}
+
+	p {
+		margin: 10px 20px;
+	}
+
+	// 各項目p 見出し
+	.change_posts_show_p {
+		border-left: solid 3px #08d9d6;
+		padding-left: 5px;
+		width: 110px;
+		text-align: left;
+	}
+
+	// 各項目のdiv
+	.change_posts_show_div {
+		display: flex;
+	}
+
+	// データ取得余白
+	.change_posts_show_data {
+		margin: 10px 0;
+		margin-left: 10px;
+		text-align: left;
+	}
+
+	// その他・連絡事項
+	.change_posts_show_others {
+		.change_posts_show_other {
+			border-bottom: solid 3px #08d9d6;
+			text-align: center;
+			padding: 3px;
+		}
+	}
+}
+
+// ------------------------------------------------------
+//         index 管理者画面
+// ------------------------------------------------------
+
+// 全体余白
+#change_posts_index_body {
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+
+	h1 {
+		text-align: center;
+		font-size: 20px;
+		display: inline-block;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
+	}
+
+	table {
+		margin: 0 auto;
+		th {
+			border: solid 1px #08d9d6;
+			padding: 5px;
+		}
+		td {
+			border: solid 1px #08d9d6;
+			padding: 5px;
+		}
+	}
 }
