--- a/app/assets/stylesheets/incorporates.scss
+++ b/app/assets/stylesheets/incorporates.scss
@@ -3,9 +3,23 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 // ---------------------------------------------------------------
-//        （管理者側）取り組みページ 投稿画面
+//        （管理者側）取り組みページ 投稿画面 new
 // ---------------------------------------------------------------
 
+// 全体余白・背景変更
+#incorporates_new_body {
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+	h1 {
+		text-align: center;
+		font-size: 20px;
+		display: inline-block;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
+	}
+}
 // 項目を横並びにする
 .incorporate_flex {
 	display: flex;
@@ -14,14 +28,106 @@
 // 内容のテキストボックス上余白
 #incorporate_content {
 	margin-top: 5px;
+	width: 100%;
+	padding: 5px;
+	label {
+		border-bottom: solid 3px #08d9d6;
+		padding-bottom: 5px;
+	}
+	#incorporate_content {
+		width: 95%;
+		height: 110px;
+	}
 }
 
-.incorpoate_label {
+.incorporate_label {
 	margin-right: 5px;
+	border-left: solid 3px #08d9d6;
+	padding-left: 5px;
 }
 // 投稿画像pの下線
 #incorporate_images {
-	border-bottom: dashed 2px #fce38a;
+	border-bottom: dashed 2px #08d9d6;
 	padding: 5px 0;
 	margin: 10px 0px;
+}
+
+#incorporate_action {
+	input {
+		margin: 10px 0px;
+		font-weight: bold;
+		width: 100%;
+		background-color: #08d9d6;
+		border: solid 3px #09a19f;
+		border-radius: 5px;
+	}
+}
+
+// ---------------------------------------------------------------
+//        (保護者側) 取り組み一覧 index
+// ---------------------------------------------------------------
+
+#incorporates_index_body {
+	padding: 20px;
+	table {
+		border: solid 1px #fce38a;
+		margin: 0 auto;
+		th {
+			border: solid 1px #fce38a;
+			text-align: center;
+			padding: 5px;
+		}
+		td {
+			border: solid 1px #fce38a;
+			text-align: center;
+			padding: 5px;
+		}
+	}
+}
+
+// --------------------------------------------------------------
+//        (保護者側) 取り組み一覧 show
+// ---------------------------------------------------------------
+
+// 全体余白
+#incorporates_show_body {
+	padding: 20px;
+
+	// 項目div
+	.incorporates_show_div {
+		display: flex;
+		margin: 10px;
+		// 見出しp
+		.incorporates_show_p {
+			border-left: solid 3px #fce38a;
+			padding-left: 5px;
+			text-align: left;
+		}
+		// データ取得
+		.incorporates_show_data {
+			text-align: left;
+		}
+	}
+
+	.incorporates_show_contents {
+		margin: 10px;
+		.incorporates_show_contents_p {
+			border-bottom: solid 3px #fce38a;
+			padding-bottom: 5px;
+		}
+		.incorporates_show_content {
+			height: 100px;
+			width: 100%;
+			text-align: left;
+			margin-top: 5px;
+		}
+	}
+
+	.incorporates_show_images {
+		img {
+			width: 100%;
+			height: auto;
+			margin: 10px 0;
+		}
+	}
 }
