--- a/app/assets/stylesheets/parent_forms.scss
+++ b/app/assets/stylesheets/parent_forms.scss
@@ -3,61 +3,138 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 // --------------------------------------------------
-//              お問い合わせページ
+//              お問い合わせページ new
 // -------------------------------------------------
 
-// フォーム全体
-#parent_forms_name {
-	//タイトル名の右側に余白
-	.parent_form_name_right {
-		margin: 0;
-		border-left: solid 3px #fce38a;
-		display: inline-block;
-		padding: 0 5px;
-	}
-	// お問い合わせ内容タイトルの下余白
-	.parent_form_label {
-		margin-bottom: 5px;
-	}
-	// お子様の名前
-	#parent_form_children_name {
-		display: flex;
-		margin: 10px 0px;
+// 全体余白
+#parent_form_new_body {
+	padding: 20px;
+	// フォーム全体
+	#parent_forms_name {
+		//タイトル名の右側に余白
+		.parent_form_name_right {
+			margin: 0;
+			border-left: solid 3px #fce38a;
+			display: inline-block;
+			padding: 0 5px;
+		}
+		// お問い合わせ内容タイトルの下余白
+		.parent_form_label {
+			margin-bottom: 5px;
+		}
+		// お子様の名前
 		#parent_form_children_name {
-			padding: 0;
-			margin: 0;
+			display: flex;
+			margin: 10px 0px;
+			#parent_form_children_name {
+				padding: 0;
+				margin: 0;
+			}
 		}
-	}
-	// 保護者様の名前
-	#parent_form_parent_name {
-		display: flex;
-		margin: 10px 0px;
+		// 保護者様の名前
 		#parent_form_parent_name {
-			padding: 0;
-			margin: 0;
+			display: flex;
+			margin: 10px 0px;
+			#parent_form_parent_name {
+				padding: 0;
+				margin: 0;
+			}
 		}
-	}
-	// お問い合わせ項目
-	#parent_form_content_name {
-		display: flex;
-		margin: 10px 0px;
+		// お問い合わせ項目
 		#parent_form_content_name {
-			padding: 0;
-			margin: 0;
+			display: flex;
+			margin: 10px 0px;
+			#parent_form_content_name {
+				padding: 0;
+				margin: 0;
+			}
+		}
+		// お問い合わせ内容のテキストボックスサイズ
+		#parent_form_contents {
+			width: 100%;
+			height: 150px;
 		}
 	}
-	// お問い合わせ内容のテキストボックスサイズ
-	#parent_form_contents {
+	// 送信ボタンの装飾
+	#parent_form_action {
+		margin: 10px 0px;
+		font-weight: bold;
 		width: 100%;
-		height: 150px;
+		background-color: #fce38a;
+		border: solid 3px #fdd955;
+		border-radius: 5px;
 	}
 }
-// 送信ボタンの装飾
-#parent_form_action {
-	margin: 10px 0px;
-	font-weight: bold;
-	width: 100%;
-	background-color: #fce38a;
-	border: solid 3px #fdd955;
-	border-radius: 5px;
+
+// --------------------------------------------------
+//              お問い合わせページ index
+// -------------------------------------------------
+
+#parent_form_index_body {
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+	h1 {
+		text-align: center;
+		font-size: 20px;
+		display: inline-block;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
+	}
+	table {
+		margin: 0 auto;
+		th {
+			border: solid 1px #08d9d6;
+			padding: 5px;
+		}
+		td {
+			border: solid 1px #08d9d6;
+			padding: 5px;
+		}
+
+		a {
+			text-decoration: none;
+		}
+	}
+}
+
+// --------------------------------------------------
+//              お問い合わせページ show
+// -------------------------------------------------
+
+// 全体余白
+#parent_form_body {
+	padding: 20px;
+	// 項目div
+	.parent_form_show_div {
+		display: flex;
+		margin: 10px;
+	}
+	// 見出しp
+	.parent_form_show_p {
+		text-align: left;
+		border-left: solid 3px #fce38a;
+		padding-left: 5px;
+		width: 120px;
+	}
+	.parent_form_show_data {
+		text-align: left;
+	}
+
+	.parent_form_show_contents {
+		padding: 10px;
+		// 内容p
+		.parent_form_show_content_p {
+			border-bottom: solid 3px #fce38a;
+			padding-bottom: 5px;
+		}
+		// 内容大きさ
+		.parent_form_show_content {
+			width: 100%;
+			height: 100px;
+			margin-top: 5px;
+			text-align: left;
+		}
+	}
 }
