--- a/app/assets/stylesheets/parent_informations.scss
+++ b/app/assets/stylesheets/parent_informations.scss
@@ -3,14 +3,36 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 // ---------------------------------------------------------------
-//        （管理者側）保護者に対してのお知らせ・お願いフォーム
+//        （管理者側）保護者に対してのお知らせ・お願いフォーム new
 // ---------------------------------------------------------------
 
+// 全体余白・背景色変更
+#parent_information_new_body {
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+	h1 {
+		text-align: center;
+		font-size: 20px;
+		display: inline-block;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
+	}
+}
 // 各divの余白や装飾指定
 .information_style {
 	display: flex;
 	align-items: center;
 	margin: 10px 0px;
+}
+
+// 内容文字
+#information_content {
+	label {
+		border-bottom: solid 3px #08d9d6;
+		padding-bottom: 5px;
+	}
 }
 // 内容のテキストボックスサイズ
 #parent_information_content {
@@ -21,32 +43,42 @@
 // ラベルの右側に余白
 .information_label {
 	margin-right: 5px;
+	border-left: solid 3px #08d9d6;
+	padding-left: 5px;
 }
 // 投稿するボタン装飾
 #information_action {
 	margin: 10px 0px;
 	font-weight: bold;
 	width: 100%;
-	background-color: #fce38a;
-	border: solid 3px #fdd955;
+	background-color: #08d9d6;
+	border: solid 3px #0aa09d;
 	border-radius: 5px;
 }
 
 // ----------------------------------------------------------------
 //        （保護者側）お知らせ・お願い一覧 index
 // ---------------------------------------------------------------
-table {
-	border: solid 1px #fce38a;
-	margin: 0 auto;
-	th {
+
+// 全体余白
+#parent_information_index_body {
+	padding: 20px;
+	table {
 		border: solid 1px #fce38a;
-		text-align: center;
-		padding: 5px;
-	}
-	td {
-		border: solid 1px #fce38a;
-		text-align: center;
-		padding: 5px;
+		margin: 0 auto;
+		th {
+			border: solid 1px #fce38a;
+			text-align: center;
+			padding: 5px;
+		}
+		td {
+			border: solid 1px #fce38a;
+			text-align: center;
+			padding: 5px;
+		}
+		a {
+			text-decoration: none;
+		}
 	}
 }
 
@@ -54,19 +86,47 @@ table {
 //        （保護者側）お知らせ・お願い詳細画面 show
 // ---------------------------------------------------------------
 
-// strong内容文字の下に余白
-#parent_information_p {
-	margin: 0;
-}
-// 内容のサイズ
-#parent_information_show {
-	width: 100%;
-	height: 100%;
-	margin: 5px 0px;
-}
+#parent_information_show_body {
+	padding: 20px;
 
+	// 項目div
+	.parent_information_show_div {
+		display: flex;
+		margin: 10px;
+		// 項目p
+		.parent_information_show_p {
+			text-align: left;
+			border-left: solid 3px #fce38a;
+			padding-left: 5px;
+			width: 90px;
+		}
+		// データ取得
+		.parent_information_show_data {
+			text-align: left;
+		}
+	}
+	// 内容p
+	.parent_information_show_content_p {
+		border-bottom: solid 3px #fce38a;
+		padding-bottom: 5px;
+		margin: 20px 10px;
+	}
+	// 内容のサイズ
+	.parent_information_show_content {
+		width: 100%;
+		height: 150px;
+	}
+
+	// ファイル・画像サイズ
+	#parent_information_show_image {
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
+}
 // ----------------------------------------------------------------
-//        （保護者側）お知らせ・お願い詳細画面 show
+//        （保護者側）お知らせ・お願い詳細画面 ?
 // ---------------------------------------------------------------
 
 // タイトルp(h1すぐ下)
