--- a/app/assets/stylesheets/stampings.scss
+++ b/app/assets/stylesheets/stampings.scss
@@ -2,6 +2,38 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+// ---------------------------------------------
+//       （管理者システム）打刻システム  index
+// ---------------------------------------------
+
+// 全体余白調節・背景色
+#stamping_body {
+	padding: 20px;
+	background-color: #eaeaea;
+	height: 100vh;
+	h1 {
+		text-align: center;
+		font-size: 20px;
+		display: inline-block;
+		margin: 30px 10px 20px 10px;
+		padding: 5px;
+		background-image: linear-gradient(#eaeaea 70%, #08d9d6 70%);
+	}
+
+	table {
+		margin: 0 auto;
+		border: solid 1px #08d9d6;
+		th {
+			border: solid 1px #08d9d6;
+			padding: 5px;
+		}
+		td {
+			border: solid 1px #08d9d6;
+			padding: 5px;
+		}
+	}
+}
+
 // 管理者上部にそれぞれのリンクをつける
 // クラス名でデザイン調整
 .parent_links {
@@ -20,6 +52,14 @@
 //       打刻システム new
 // ---------------------------------------------
 
+// 全体余白
+#stamping_new_body {
+	padding: 20px;
+
+	p {
+		margin: 20px;
+	}
+}
 //  フォーム装飾
 #time_nows {
 	#time_now_p {
@@ -117,5 +157,33 @@ body {
 		border-radius: 10px;
 		border: solid 2px #e0e0e0;
 		width: 100px;
+	}
+}
+
+// --------------------------------------------------
+//           show ページ
+// --------------------------------------------------
+
+// 全体余白・背景色
+#stampings_show_body {
+	padding: 20px;
+
+	// 各項目div
+	.stamping_show_div {
+		display: flex;
+		margin: 20px 40px;
+
+		// 各見出しp
+		.stamping_show_p {
+			width: 90px;
+			text-align: left;
+			border-left: solid 3px #fce38a;
+			padding-left: 5px;
+		}
+
+		// データ取得
+		.stamping_show_data {
+			text-align: left;
+		}
 	}
 }
